--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Soundcloud Shortcode",
+  "name": "Soundcloud-Shortcode",
   "version": "0.1.0",
   "devDependencies": {
     "grunt": "~0.4.4",
